fixing chrome list spacing

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ ol {
 
 li {
     text-align: center;
+    list-style-position: inside;
 }
 
 #profit_positive {
